--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,72 @@
 body{
-	background:#1c1b1b;
-	color:#666;
+	background:#ffff66;
+	color:#ccffff;
 	font-family:"Arial", sans-serif;
 }
 
 h1{
 	text-align:center;
-	color:#fff;
+	color:#000000;
 }
 
-.clearfix{
-	clear:both;
+h2{
+	text-align:center;
+	text-decoration:underline;
+	color:#000066;
+
 }
 
-#container{
-	width:350px;
-	overflow:auto;
-	margin:40px auto;
-	background: #666;
-	padding-bottom: 40px;
-	border-radius: 10px;
+#rules li{
+	list-style: disc;
+	text-align: left;
+	color:#000066;
 }
 
-#board li{
-	float:left;
-	margin: 10px;
-	height: 70px;
-	width: 70px;
-	font-size: 55px;
-	background:#333;
-	color:#ccc;
-	list-style: none;
-	text-align: center;
-	border-radius: 5px;
+th,td{
+	border:1px solid black;
+	background-color:#ffffff;
+	color:#ffffff;
+	font-size:55pt;
+	text-align:center;
+	width:100px;
+	height:100px;
 }
 
-#board li:hover,#reset:hover{
+table{
+	border-collapse:collapse;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+table,tr,td:hover,#reset:hover{
 	cursor:pointer;
-	background: #000;
+	background-color:#e0e0d1;
 }
 
 #reset{
 	border:0;
-	background: #444;
-	color:#fff;
-	width: 70%;
-	padding: 15px;
+	background:#ff8080;
+	color:#000000;
+	width:300px;
+	padding:10px;
+	font-weight:bold;
 	border-radius:5px;
+}
+
+footer {
+	display:block;
+	text-align:center;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+
+#container{
+	width:400px;
+	margin-left:auto;
+	margin-right:auto;
+	background: #ccffff;
+	border-radius: 10px;
+	padding:1px;
 }
 
 .o{
@@ -57,8 +77,3 @@ h1{
 	color: red !important;
 }
 
-footer {
-	display:block;
-	text-align: center;
-	padding-top: 20px;
-}
